// General format notes:
//   all timestamps are normalized so they can be represented as signed longs,
//   with values greater than LONG_MAX mapped to LONG_MAX

package amplab.googletrace;

option java_outer_classname = "Protos";

message Resources {
  optional float cpus = 1;
  optional float memory = 2;
  optional float disk_time = 3;
  optional float disk_space = 4;

  optional float assigned_memory = 5;
  optional float unmapped_page_cache_memory = 6;
  optional float page_cache_memory = 7;
  // Next available number: 8
}

message JobInfo {
  required int64 id = 7;
  optional string name = 1;
  optional string logical_name = 2;
  optional string user = 3;
  optional int32 scheduling_class = 4;

  optional int32 min_priority = 5;
  optional int32 max_priority = 6;

  // Next available number: 8
}

message MachineAttribute {
  optional string name = 1;
  optional string value_as_string = 2;
  optional int32 value_as_int = 3;
}

message MachineConstraint {
  required string name = 1;
  enum Type {
    EQUAL = 0; NOT_EQUAL = 1;
    LESS_THAN = 2; GREATER_THAN = 3;
  };
  required Type type = 2;
  optional int32 compare_number = 3;
  optional string compare_string = 4;
}

message TaskInfo {
  required JobInfo job = 9;
  required int32 task_index = 10;
  optional int32 priority = 1;
  optional int32 scheduling_class = 2;

  repeated MachineConstraint constraints = 6;
  optional Resources requested_resources = 7;
  optional bool different_machines = 8;
 
  // If filled in, value at index /i/ is the number of events of type i
  repeated int32 num_events_by_type = 11;
  // Last status of task
  optional TaskEventType final_event = 12;
  optional int64 first_submit_time = 13;
  optional int64 first_schedule_time = 14;
  optional int64 last_deschedule_time = 15;
  optional int32 num_missing = 16;
  optional int32 num_events = 17;

  // Next available number: 18
}

message MachineInfo {
  required int64 id = 6;
  optional Resources capacity = 1;
  repeated MachineAttribute attributes = 2;

  optional string platform_id = 3;

  optional int64 last_down_time = 4;
  optional int64 last_up_time = 5;
  // Next available number: 7
}

message TaskUsage {
  required int64 start_time = 1;
  required int64 end_time = 2;
  
  optional Resources resources = 6;
  optional Resources max_resources = 7;

  optional float cycles_per_instruction = 8;
  optional float memory_accesses_per_instruction = 9;

  optional float sample_portion = 10;
  optional bool aggregation_type = 11;

  // denormalized information to aid analysis. These should be obtained from the
  // first record before start_time in the raw data, unless that is incomplete.
  optional TaskInfo task_info = 13;
  optional MachineInfo machine_info = 14;
  // Next available number: 15
}

enum MissingType {
  SNAPSHOT_BUT_NO_TRANSITION = 0;
  NO_SNAPSHOT_OR_TRANSITION = 1;
  EXISTS_BUT_NO_CREATION = 2;
}

enum TaskEventType {
  SUBMIT = 0;
  SCHEDULE = 1;
  EVICT = 2;
  FAIL = 3;
  FINISH = 4;
  KILL = 5;
  LOST = 6;
  UPDATE_PENDING = 7;
  UPDATE_RUNNING = 8;
};

message TaskEvent {
  required int64 time = 1;
  optional MissingType missing_type = 2;
  
  required TaskEventType type = 6;
  required TaskInfo info = 7;
  optional MachineInfo machine_info = 9;
  // Next available number: 10
}

message JobEvent {
  required int64 time = 1;
  optional MissingType missing_type = 2;

  required TaskEventType type = 4;

  required JobInfo info = 5;
  // Next available number: 6
}

message MachineEvent {
  required int64 time = 1;
  optional bool up = 3;
  required MachineInfo info = 4;
  // Next available number: 5
}
